deploy/k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: contract-service-frontend
  namespace: production
  labels:
    app: contract-service-frontend
    component: frontend
    part-of: instituto-itinerante
    environment: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: contract-service-frontend
  template:
    metadata:
      labels:
        app: contract-service-frontend
        component: frontend
        part-of: instituto-itinerante
        environment: production
    spec:
      containers:
      - name: contract-service-frontend
        image: ghcr.io/apsferreira/contract-service-frontend:main-8b06b13
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /health
            port: http
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 3
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /health
            port: http
          initialDelaySeconds: 5
          periodSeconds: 5
          timeoutSeconds: 3
          failureThreshold: 3
        resources:
          requests:
            memory: "32Mi"
            cpu: "25m"
          limits:
            memory: "128Mi"
            cpu: "100m"
      restartPolicy: Always
