deploy/k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: contract-service-frontend
  namespace: production
  labels:
    app: contract-service-frontend
    component: frontend
    part-of: instituto-itinerante
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: contract-service-frontend
