deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: contract-service
  namespace: production
  labels:
    app: contract-service
    component: backend
    part-of: instituto-itinerante
    environment: production
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: contract-service
    environment: production
